--- a/src/css-summoner/ui/layouts/DocLayout.astro
+++ b/src/css-summoner/ui/layouts/DocLayout.astro
@@ -24,11 +24,7 @@ const mainClass = 'container mx-auto px-global max-w-screen-2xl'
 	<body>
 		<Header />
 		<main class={mainClass}>
-			<div class='mt-6'>
-				<a href='/' class='btn-base btn-link btn-sm theme-inverse no-default'>
-					← back to css-summoner
-				</a>
-			</div>
+			<div class='mt-6'></div>
 			<Menu />
 			<slot />
 			<Menu />
