--- a/src/css-summoner/ui/layouts/Footer.astro
+++ b/src/css-summoner/ui/layouts/Footer.astro
@@ -1,26 +1,41 @@
-<footer class='pt-4 pb-24 text-center text-neutral-500 bg-neutral'>
-	<div class='mb-2'>© c-studio</div>
+<footer class='pt-6 pb-20 space-y-6 text-center text-neutral-500 bg-neutral'>
 	<div class='space-x-4'>
 		<a
 			href='https://github.com/llama2f/css-summoner'
 			target='_blank'
 			rel='noopener noreferrer'
 			tabindex='0'
-			class='hover:text-neutral-700'>GitHub</a
+			class='hover:text-neutral-700 underline'>GitHub</a
 		>
 		<a
 			href='https://x.com/web_cstudio'
 			target='_blank'
 			rel='noopener noreferrer'
 			tabindex='0'
-			class='hover:text-neutral-700'>X(Twitter)</a
+			class='hover:text-neutral-700 underline'>X(Twitter)</a
 		>
 		<a
 			href='https://c-std.com'
 			target='_blank'
 			rel='noopener noreferrer'
 			tabindex='0'
-			class='hover:text-neutral-700'>Web</a
+			class='hover:text-neutral-700 underline'>Web</a
 		>
 	</div>
+
+	<div>
+		ご支援いただけますと開発のモチベーションになります！<ul>
+			<li>
+				<a
+					href='https://www.amazon.jp/hz/wishlist/ls/3FM7AUUJFZ893?ref_=wl_share'
+					class='underline'
+					tabindex='0'
+					rel='noopener noreferrer'
+					target='_blank'>ほしいものリスト</a
+				>
+			</li>
+		</ul>
+	</div>
+
+	<div class='mb-2'>© c-studio</div>
 </footer>
