アコーディオン

--- a/src/css-summoner/styles/all-components.css
+++ b/src/css-summoner/styles/all-components.css
@@ -1,4 +1,3 @@
-
 @import './button/index.css';
 @import './card/index.css';
 @import './text/index.css';
@@ -8,6 +7,7 @@
 @import './badge/index.css';
 @import './tooltip/index.css';
 @import './infobox/index.css';
+@import './accordion/index.css';
 
 @import './colors/color-system.css';
 @import './colors/custom-color.css';
