--- a/src/css-summoner/ui/layouts/DocLayout.astro
+++ b/src/css-summoner/ui/layouts/DocLayout.astro
@@ -35,5 +35,6 @@ const mainClass = 'container mx-auto px-global max-w-screen-2xl'
 			</div>
 		</main>
 		<Footer />
+		<script src='../../ui/scripts/ui-controller.js'></script>
 	</body>
 </html>
