--- a/src/css-summoner/ui/layouts/Footer.astro
+++ b/src/css-summoner/ui/layouts/Footer.astro
@@ -24,7 +24,8 @@
 	</div>
 
 	<div>
-		ご支援いただけますと開発のモチベーションになります！<ul>
+		<p class='text-xs'>ご支援いただけますと開発のモチベーションになります！</p>
+		<ul>
 			<li>
 				<a
 					href='https://www.amazon.jp/hz/wishlist/ls/3FM7AUUJFZ893?ref_=wl_share'
