--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,9 +30,9 @@ import siteData from '@configs/siteData.json'
 				<ClassBuilder client:load />
 			</div>
 
-			<div class='p-4 rounded-lg'>
+			<div class='rounded-lg py-6'>
 				<h2 class='font-bold mb-2'>使い方</h2>
-				<ol class='list-decimal list-inside space-y-2 ml-4 text-sm'>
+				<ol class='list-decimal list-inside space-y-2 text-sm'>
 					<li>左側のパネルからコンポーネントタイプを選択</li>
 					<li>バリアント、サイズ、角丸などを選択して基本スタイルを設定</li>
 					<li>
