domからcolorプロパティ削除

--- a/src/css-summoner/ui/layouts/Header.astro
+++ b/src/css-summoner/ui/layouts/Header.astro
@@ -23,7 +23,7 @@ const { title = siteData.siteName } = Astro.props
 
 	<div class='flex items-center gap-2'>
 		{/* テーマスイッチャーを先に配置 */}
-		<ThemeSwitcher position='' />
+		<ThemeSwitcher bgColor='bg-neutral-500/30' position='relative' />
 
 		{/* ドキュメントページ以外でカスタマイズ系ボタン表示 */}
 		{
