css構造とusage草案

--- a/src/css-summoner/ui/layouts/DocLayout.astro
+++ b/src/css-summoner/ui/layouts/DocLayout.astro
@@ -12,7 +12,7 @@ const { title = siteData.siteName, desc = siteData.siteDescription } =
 	Astro.props
 
 // スタイルシートのインポート
-import '@stylesCss/styles.css'
+import '@stylesCss/no-bundle/styles.css'
 import Menu from '@layouts/Menu.astro'
 
 const mainClass = 'container mx-auto px-global max-w-screen-2xl'
