--- a/src/css-summoner/ui/layouts/PageLayout.astro
+++ b/src/css-summoner/ui/layouts/PageLayout.astro
@@ -2,8 +2,8 @@
 import Footer from '@layouts/Footer.astro'
 import Head from '@layouts/Head.astro'
 import Header from '@layouts/Header.astro'
-import Menu from '@layouts/Menu.astro'
 import siteData from '@configs/siteData.json'
+import 'highlight.js/styles/dark.min.css'
 
 // スタイルシートのインポート
 import '@stylesCss/no-bundle/styles.css'
@@ -25,9 +25,10 @@ const mainClass = 'container mx-auto px-global py-global max-w-screen-2xl'
 		<Header />
 		<main class={mainClass}>
 			<slot />
-			<Menu />
 		</main>
-
+		<a href='/' class='btn-base btn-link btn-sm theme-inverse no-default'>
+			← back to css-summoner
+		</a>
 		<Footer />
 	</body>
 </html>
